# mini_transcriber

./: .gitignore  AGENTS.md  LEARNINGS.md  Makefile  README.md  app.py  cli.py  download_model.py  install_service.sh  main.py  mini-transcriber.service  pyproject.toml  requirements-cpu.txt  requirements-full.txt  requirements.txt  setup.bat  setup.ps1  setup.sh  transcribe_demo.py
.github/workflows/: ci.yml
quick_tests/: test_app_run.py  test_cli_run.py  test_download_model_run.py
static/: index.html
tests/: STRESS_TESTING.md  conftest.py  stress_test.py  test_app.py  test_cli.py  test_concurrent.py  test_download_model.py  test_transcribe.py
