[project]
name = "mini-transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "llvmlite==0.45.1",
    "more-itertools==9.1.0",
    "numba==0.62.1",
    "numpy==1.26.4",
    "pytest>=8.4.2",
    "regex>=2025.10.22",
    "requests>=2.32.5",
    "sentencepiece==0.1.99",
    "sounddevice==0.4.6",
    "soundfile==0.12.1",
    "tiktoken>=0.12.0",
    "torch==2.2.2+cpu",
    "torchaudio==2.2.2+cpu",
    "tqdm>=4.67.1",
    "transformers==4.35.0",
    "whisper>=1.1.10",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
